# marches-rltk

./: Cargo.toml  README.md
resources/: actors.json  actors.ron  items.json  items.ron  unicode_trunc_desat_16x16.xcf  unicode_trunc_desat_32x32.xcf  unicode_trunc_graph_16x16.xcf  unicode_trunc_grey_16x16.xcf
src/: main.rs  state.rs
src/cameras/: mod.rs
src/components/: actors.rs  attributes.rs  commands.rs  mod.rs  strategies.rs
src/map_builders/: empty.rs  mod.rs  rooms.rs  sewers.rs
src/maps/: atlas.rs  mod.rs
src/spawners/: actors.rs  areas.rs  items.rs  mod.rs  templates.rs
src/systems/: actor_render.rs  combat.rs  display_text.rs  equipment.rs  fading_text.rs  fading_up_text.rs  fol.rs  fov.rs  heal.rs  hud.rs  input.rs  item.rs  item_render.rs  map_initialize.rs  map_render.rs  might_talk.rs  mod.rs  mouse.rs  move_strategy.rs  movement.rs  patrol_movers.rs  player_input.rs  position_resolution.rs  random_movers.rs  render.rs  select_equipped.rs  select_item.rs  select_target.rs  state_change.rs  strategy.rs  tooltip.rs  utils.rs
src/systems/render/: mod.rs
