[package]
name = "marches-rltk"
version = "0.1.0"
authors = ["Galen <palmergs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { version="*", features = ["serde"] }
legion = { version = "0.3.1", features = ["extended-tuple-impls"] }
lazy_static = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
